# linux-hidl

./: .gitmodules
rpm/: .linux-hidl.spec.kate-swp  0001-hidl-Add-building-and-generating-for-HIDL-headers-src-and.patch  0001-libfmq-Add-building-and-generating-for-HIDL-headers-src-and.patch  0001-libhidl-Add-building-and-generating-for-HIDL-headers-src-and.patch  0001-libhwbinder-Add-building-and-generating-for-HIDL-headers-src-and.patch  0001-systemcore-Add-building-and-generating-for-HIDL-headers-src-and.patch  0002-hidl-Fix-bulding-on-gcc5.patch  0002-libhidl-Fix-bulding-on-gcc5.patch  0002-libhwbinder-Fix-bulding-on-gcc5.patch  0002-systemcore-Fix-bulding-on-gcc5.patch  0003-hidl-MakeParentHierarchy-avoid-race-condition-between-sta.patch  0003-libhwbinder-Make-sure-we-define-__ANDROID__-in-hwbinder.patch  0003-systemcore-base-define-__BIONIC__-for-properties-code.patch  0004-libhidl-Add-building-and-generating-for-HIDL-headers-src-and.patch  0004-systemcore-liblog-fix-compilation-with-GCC-5.patch  0005-libhidl-Fix-bulding-on-gcc5.patch  0006-libfmq-Add-building-and-generating-for-HIDL-headers-src-and.patch  0007-libhwbinder-Add-building-and-generating-for-HIDL-headers-src-and.patch  0008-libhwbinder-Fix-bulding-on-gcc5.patch  0009-libhwbinder-Make-sure-we-define-__ANDROID__-in-hwbinder.patch  0010-systemcore-Add-building-and-generating-for-HIDL-headers-src-and.patch  0011-systemcore-base-define-__BIONIC__-for-properties-code.patch  0012-systemcore-Fix-bulding-on-gcc5.patch  0013-systemcore-liblog-fix-compilation-with-GCC-5.patch  0014-hardware-interfaces-cmakelist.patch  0015-hidl-cmakelist.patch  0016-libfmq-cmakelist.patch  0017-libhidl-cmakelist.patch  0018-libhwbinder-cmakelist.patch  0019-systemcore-cmakelist.patch  0019-systemcore-cmakelists.patch  0020-add-android-headers.patch  0021-system_core-libutils-remove-vector-const.patch  0022-system_core-libcutils-add-throw.patch  linux-hidl.spec
rpm/cmake/hardware/interfaces/: CMakeLists.txt
rpm/cmake/hidl/: CMakeLists.txt
rpm/cmake/hidl/hashing/: CMakeLists.txt
rpm/cmake/hidl/host_utils/: CMakeLists.txt
rpm/cmake/hidl/utils/: CMakeLists.txt
rpm/cmake/libfmq/: CMakeLists.txt
rpm/cmake/libhidl/: CMakeLists.txt
rpm/cmake/libhidl/base/: CMakeLists.txt
rpm/cmake/libhidl/minijail/: CMakeLists.txt
rpm/cmake/libhidl/transport/: CMakeLists.txt
rpm/cmake/libhwbinder/: CMakeLists.txt
rpm/cmake/system_core/: CMakeLists.txt
rpm/cmake/system_core/base/: CMakeLists.txt
rpm/cmake/system_core/libcutils/: CMakeLists.txt
rpm/cmake/system_core/liblog/: CMakeLists.txt
rpm/cmake/system_core/libutils/: CMakeLists.txt
